各セクションのギミックを統一・デザイン崩れ修正（glow/slide/flip/zoomカード）

--- a/index.html
+++ b/index.html
@@ -1653,49 +1653,40 @@
                         <div class="price-label">インソール代金の全額を一旦お支払いいただき、ご自身で健康保険組合に請求していただく形となります。</div>
                     </div>
                 </div>
-                <div class="flip-card scroll-animate">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <h3>18歳以下は小児医療費助成</h3>
-                            <div class="price">大阪市内在住の場合</div>
-                            <div class="price-label">1医療機関ごと 1日最大500円（月2日限度）</div>
-                            <div style="margin-top: 1rem; font-size: 0.9rem; color: #00c9a7;">
-                                <i class="fas fa-mouse-pointer"></i> マウスを乗せて詳細を見る
-                            </div>
+                <div class="slide-card scroll-animate">
+                    <div class="slide-content">
+                        <div class="slide-icon">
+                            <i class="fas fa-child"></i>
                         </div>
-                        <div class="flip-card-back">
-                            <h3>小児医療費助成制度</h3>
-                            <p>大阪市内在住の18歳以下の方は、小児医療費助成制度を利用できます。</p>
-                            <ul>
-                                <li>1日最大500円の負担</li>
-                                <li>月2日までの限度</li>
-                                <li>大阪市内在住が条件</li>
-                                <li>18歳以下が対象</li>
-                            </ul>
-                            <a href="#contact" class="cta-btn">助成制度の確認</a>
-                        </div>
+                        <h3>18歳以下は小児医療費助成</h3>
+                        <div class="price">大阪市内在住の場合</div>
+                        <div class="price-label">1医療機関ごと 1日最大500円（月2日限度）</div>
+                        <ul class="disease-list" style="margin-top:1.5rem;">
+                            <li>1日最大500円の負担</li>
+                            <li>月2日までの限度</li>
+                            <li>大阪市内在住が条件</li>
+                            <li>18歳以下が対象</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="zoom-card scroll-animate">
-                    <div class="zoom-bg"></div>
-                    <div class="zoom-icon">
-                        <i class="fas fa-list-check"></i>
+                <div class="slide-card scroll-animate">
+                    <div class="slide-content">
+                        <div class="slide-icon">
+                            <i class="fas fa-list-check"></i>
+                        </div>
+                        <h3>保険適応で製作可能な疾患</h3>
+                        <ul class="disease-list">
+                            <li>扁平足</li>
+                            <li>凹足（ハイアーチ）</li>
+                            <li>外反母趾</li>
+                            <li>足底腱膜炎</li>
+                            <li>モートン病</li>
+                            <li>胼胝（タコ）・鶏眼（ウオノメ）</li>
+                        </ul>
                     </div>
-                    <h3>保険適応で製作可能な疾患</h3>
-                    <ul class="disease-list">
-                        <li>扁平足</li>
-                        <li>凹足（ハイアーチ）</li>
-                        <li>外反母趾</li>
-                        <li>足底腱膜炎</li>
-                        <li>モートン病</li>
-                        <li>胼胝（タコ）・鶏眼（ウオノメ）</li>
-                    </ul>
                 </div>
             </div>
             <div style="margin-top:2rem; color:#888; font-size:1rem;">
-                ※小児医療費助成とは…医療費・訪問看護利用料の一部自己負担額を助成。<br>
-                ※詳細は大阪市ホームページをご参照ください。
-            </div>
         </div>
     </section>
 
@@ -1706,13 +1697,23 @@
             <div class="flow-container">
                 <div class="flow-line"></div>
                 <div class="flow-steps">
-                    <div class="zoom-card scroll-animate">
-                        <div class="zoom-bg"></div>
-                        <div class="zoom-icon">
-                            <i class="fas fa-user-md"></i>
+                    <div class="flip-card scroll-animate">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <div class="step-number">1</div>
+                                <h3>診察</h3>
+                                <p>医師が足の状態を診察します。必要に応じてレントゲン検査やエコー検査を行う場合がございます。</p>
+                            </div>
+                            <div class="flip-card-back">
+                                <h3>診察の詳細</h3>
+                                <ul>
+                                    <li>足の形状・変形の確認</li>
+                                    <li>歩行パターンの分析</li>
+                                    <li>レントゲン検査（必要時）</li>
+                                    <li>エコー検査（必要時）</li>
+                                </ul>
+                            </div>
                         </div>
-                        <h3>診察</h3>
-                        <p>医師が足の状態を診察します。必要に応じてレントゲン検査やエコー検査を行う場合がございます。</p>
                     </div>
                     <div class="flip-card scroll-animate">
                         <div class="flip-card-inner">
@@ -1720,29 +1721,35 @@
                                 <div class="step-number">2</div>
                                 <h3>計測</h3>
                                 <p>義肢装具士が足の形などを計測し、その結果を元に医師が処方し、インソールを製作します。</p>
-                                <div style="margin-top: 1rem; font-size: 0.9rem; color: #00c9a7;">
-                                    <i class="fas fa-mouse-pointer"></i> マウスを乗せて詳細を見る
-                                </div>
                             </div>
                             <div class="flip-card-back">
                                 <h3>計測・製作の詳細</h3>
-                                <p>最新の技術と専門知識で、一人ひとりに最適なインソールを製作します。</p>
                                 <ul>
                                     <li>3Dスキャンによる精密計測</li>
                                     <li>足圧分布の分析</li>
                                     <li>医師による処方設計</li>
                                     <li>義肢装具士による製作</li>
                                 </ul>
-                                <a href="#contact" class="cta-btn">製作の相談</a>
                             </div>
                         </div>
                     </div>
-                    <div class="glow-card scroll-animate">
-                        <div class="glow-icon">
-                            <i class="fas fa-check-circle"></i>
+                    <div class="flip-card scroll-animate">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <div class="step-number">3</div>
+                                <h3>完成</h3>
+                                <p>約1週間でインソールが完成します。装着感の調整と使用方法の指導を行います。</p>
+                            </div>
+                            <div class="flip-card-back">
+                                <h3>完成・調整の詳細</h3>
+                                <ul>
+                                    <li>約1週間での完成</li>
+                                    <li>装着感の調整</li>
+                                    <li>使用方法の指導</li>
+                                    <li>フォローアップ診察</li>
+                                </ul>
+                            </div>
                         </div>
-                        <h3>完成</h3>
-                        <p>約1週間でインソールが完成します。装着感の調整と使用方法の指導を行います。</p>
                     </div>
                 </div>
             </div>
@@ -1754,30 +1761,18 @@
         <div class="container">
             <h2 class="section-title scroll-animate">以下に当てはまる方は一度インソール外来をご検討下さい</h2>
             <div class="case-grid">
-                <div class="flip-card scroll-animate">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="https://images.unsplash.com/photo-1503454537195-1dcabb73ffb9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="子どもの足" class="case-image">
-                            <h3>子どもの足の変形</h3>
-                            <p>成長期の子どもの足は軟骨が多く柔らかいため変形しやすく、狭い靴の着用やスポーツによる過度な負担でリスクが増加します。</p>
-                            <div style="margin-top: 1rem; font-size: 0.9rem; color: #43e97b;">
-                                <i class="fas fa-mouse-pointer"></i> マウスを乗せて詳細を見る
-                            </div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h3>子どもの足の変形</h3>
-                            <p>調査では小学生の40％以上に足部変形が見られ、これは姿勢の悪化や運動能力の低下、転倒リスクにつながります。</p>
-                            <ul>
-                                <li>成長期の軟骨の柔らかさ</li>
-                                <li>狭い靴の着用による影響</li>
-                                <li>スポーツによる過度な負担</li>
-                                <li>適切な足装具による矯正効果</li>
-                            </ul>
-                            <a href="#contact" class="cta-btn">早期発見の相談</a>
-                        </div>
+                <div class="zoom-card scroll-animate">
+                    <div class="zoom-bg"></div>
+                    <img src="https://images.unsplash.com/photo-1503454537195-1dcabb73ffb9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="子どもの足" class="case-image">
+                    <h3>子どもの足の変形</h3>
+                    <p>成長期の子どもの足は軟骨が多く柔らかいため変形しやすく、狭い靴の着用やスポーツによる過度な負担でリスクが増加します。</p>
+                    <div style="margin-top: 1.5rem; padding: 1rem; background: rgba(255,255,255,0.1); border-radius: 10px; border-left: 4px solid #43e97b;">
+                        <h4 style="color: #43e97b; margin-bottom: 0.5rem; font-size: 1rem;">🔍 早期発見の重要性</h4>
+                        <p style="font-size: 0.9rem; opacity: 0.9;">成長期の足の変形は、適切な時期に処置することで大幅に改善される可能性があります。</p>
                     </div>
                 </div>
-                <div class="glow-card scroll-animate">
+                <div class="zoom-card scroll-animate">
+                    <div class="zoom-bg"></div>
                     <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="歩行" class="case-image">
                     <h3>歩くと転びやすい・疲れやすい</h3>
                     <p>筋力が低下してくると正しい姿勢を保持できず、骨格のバランスが崩れてしまい、転倒やつまずきを起こすリスクが上昇し、疲れやすくなってしまいます。<br>適した足底装具を使用することで地面との設置面積が増えるとバランスをとりやすくなり、転倒やつまずきのリスクを抑えることができます。</p>
@@ -1786,15 +1781,14 @@
                         <p style="font-size: 0.9rem; opacity: 0.9;">適切なインソールにより、歩行時の安定性が向上し、疲労感が軽減されます。</p>
                     </div>
                 </div>
-                <div class="slide-card scroll-animate">
-                    <div class="slide-content">
-                        <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="足の痛み" class="case-image">
-                        <h3>足が痛い・変形のある方</h3>
-                        <p>足の痛み、変形などがある場合、特定の場所にかかる過度な負担を軽減する除圧などで根本的な原因にアプローチした治療が有効です。</p>
-                        <div style="margin-top: 1.5rem; padding: 1rem; background: rgba(255,255,255,0.1); border-radius: 10px; border-left: 4px solid #43e97b;">
-                            <h4 style="color: #43e97b; margin-bottom: 0.5rem; font-size: 1rem;">🎯 根本的アプローチ</h4>
-                            <p style="font-size: 0.9rem; opacity: 0.9;">痛みの原因となる負荷を分散し、足本来の機能を回復させることで根本的な改善を目指します。</p>
-                        </div>
+                <div class="zoom-card scroll-animate">
+                    <div class="zoom-bg"></div>
+                    <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="足の痛み" class="case-image">
+                    <h3>足が痛い・変形のある方</h3>
+                    <p>足の痛み、変形などがある場合、特定の場所にかかる過度な負担を軽減する除圧などで根本的な原因にアプローチした治療が有効です。</p>
+                    <div style="margin-top: 1.5rem; padding: 1rem; background: rgba(255,255,255,0.1); border-radius: 10px; border-left: 4px solid #43e97b;">
+                        <h4 style="color: #43e97b; margin-bottom: 0.5rem; font-size: 1rem;">🎯 根本的アプローチ</h4>
+                        <p style="font-size: 0.9rem; opacity: 0.9;">痛みの原因となる負荷を分散し、足本来の機能を回復させることで根本的な改善を目指します。</p>
                     </div>
                 </div>
             </div>
